[package]
name = "songkick"
version = "0.1.0"
description = "Rust library for SongKick API"
authors = ["Enrico Risa <enrico.risa@gmail.com>"]
repository = "https://github.com/maggiolo00/songkick-api"
documentation = "https://docs.rs/songkick"
exclude = ["fixtures/*"]

license = "MIT"
keywords = ["SongKick", "Concerts", "Music"]


[dependencies]
url = "1.2.1"
hyper = "0.9.10"
serde = "0.8.19"
serde_json = "0.8.4"


[dev-dependencies]
prettytable-rs = "0.6.6"
shrust = "0.0.4"


