[package]
name = "songkick"
version = "0.1.0"
description = "Rust library for SongKick API"
authors = ["Enrico Risa <enrico.risa@gmail.com>"]
edition = "2018"
repository = "https://github.com/RustRome/songkick-api"
documentation = "https://docs.rs/songkick"
exclude = ["fixtures/*"]
license = "MIT"
keywords = ["SongKick", "Concerts", "Music"]

[dependencies]
url = "1.2.1"
reqwest = { version = "0.10", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
prettytable-rs = "0.8"
shrust = "0.0.4"
